# tyriavault-backend

./: .env.test  README.md  TyriaVault_Model.sql  TyriaVault_Schema.dbs  pyproject.toml  qodana.yaml  requirements.txt  sonar-project.properties
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  qodana_code_quality.yml  sonar_code_quality.yml
.run/: Run All Tests.run.xml  Run FastApi with Uvicorn.run.xml
app/: __init__.py  main.py
app/api/v1/: __init__.py  account.py  common.py  items.py  worlds.py
app/core/: config.py  logging.py  utils.py
app/crawlers/: worlds_crawler.py
app/db/: base.py  dependency.py  model.py  session.py
app/db/data/: genders_data.py  professions_data.py  races_data.py  seeding.py
app/db/model/: gameaccount.py
app/gw2/: __init__.py  client.py
app/tests/: api_common_test.py  gw2_client_test.py  test_common.py  test_utils.py  test_worlds.py  test_worlds_crawler.py
