[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "tyriavault-backend"
version = "0.1.0"
dependencies = [
    "fastapi==0.118.2",
    "uvicorn[standard]==0.37.0",
    "pydantic==2.12.0",
    "pydantic-settings==2.11.0",
    "SQLAlchemy==2.0.43",
    "psycopg-binary==3.2.10",
    "python-dotenv==1.1.1",
    "httpx==0.28.1",
    "pytest-mock==3.15.1",
    "pytest==8.4.2"
]
requires-python = ">=3.13"

authors = [
    {name = "Jade Arkadian"}
]

description = "TyriaVault Backend ⚔️"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["gw2", "tyria", "vault", "backend", "api"]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Framework :: FastAPI"
]
